# ticgit

./: .gitignore  AUTHORS  CHANGELOG  CNAME  Cargo.toml  Gemfile  H.php  PLAN.md  README  README.md  README.mkd  Rakefile  TODO  ticgit-ng.gemspec  ticgit.gemspec
1206206577_find-the-git-directory-properly-_425/: COMMENT_1206565689_schacon@gmail.com
1210439407_create-assign-action_786/: ASSIGNED_pope@shifteleven.com  COMMENT_1210439407_pope@shifteleven.com  TAG_assign  TICKET_ID
branch/1f/sc-branch-1#31/github/head-ref/: __value
branch/1f/sc-branch-1#31/review/url/: __value
branch/1f/sc-branch-1#31/title/: __value
branch/e8/ticgit-rust-rewrite#30/description/: __value
branch/e8/ticgit-rust-rewrite#30/github/head-ref/: __value
branch/e8/ticgit-rust-rewrite#30/review/url/: __value
branch/e8/ticgit-rust-rewrite#30/title/: __value
commit/52/52a6543c6504c33af7aad2feda907e37e5af8898/branch-id/: __value
commit/ae/aea170df3034b651ca32e0d2925f430573d017d1/branch-id/: __value
crates/ticgit/: Cargo.toml
crates/ticgit-lib/: Cargo.toml
crates/ticgit-lib/src/: error.rs  keys.rs  lib.rs  query.rs  store.rs  test_support.rs  ticket.rs
crates/ticgit/src/: cli.rs  editor.rs  main.rs  render.rs  session_state.rs
crates/ticgit/src/commands/: assign.rs  checkout.rs  comment.rs  edit.rs  import.rs  init.rs  list.rs  milestone.rs  mod.rs  new.rs  points.rs  recent.rs  show.rs  state.rs  sync.rs  tag.rs  tui.rs  view.rs
crates/ticgit/tests/: cli.rs
docs/: CNAME  index.html
features/: create_tickets.feature  help.feature  points.feature  ticket_completion.feature
features/step_definitions/: common_steps.rb
features/support/: cli.rb  env.rb  sandbox.rb
lib/: ticgit-ng.rb  ticgit.rb
lib/ticgit/: base.rb  cli.rb  command.rb  comment.rb  ticket.rb  version.rb
lib/ticgit-ng/: base.rb  cli.rb  ticket.rb  version.rb
lib/ticgit-ng/command/: assign.rb  comment.rb  new.rb  show.rb  state.rb  sync.rb
lib/ticgit/command/: assign.rb  checkout.rb  comment.rb  list.rb  milestone.rb  new.rb  points.rb  recent.rb  show.rb  state.rb  tag.rb
project/github/last-imported-merged-at/: __value
project/github/repo/: __value
project/ticgit/tickets/12dc8dc8-922b-4678-979e-583a1a033504/created-at/: __value
project/ticgit/tickets/12dc8dc8-922b-4678-979e-583a1a033504/description/: __value
project/ticgit/tickets/12dc8dc8-922b-4678-979e-583a1a033504/title/: __value
project/ticgit/tickets/16b9b69e-291e-49b6-ae43-e206a8a72a98/created-at/: __value
project/ticgit/tickets/16b9b69e-291e-49b6-ae43-e206a8a72a98/title/: __value
project/ticgit/tickets/1731bfc0-1dd1-4357-9331-8aada7b4042c/created-at/: __value
project/ticgit/tickets/1731bfc0-1dd1-4357-9331-8aada7b4042c/description/: __value
project/ticgit/tickets/1731bfc0-1dd1-4357-9331-8aada7b4042c/title/: __value
project/ticgit/tickets/a07da76c-1fae-4d98-bff8-1d92652c2cdc/created-at/: __value
project/ticgit/tickets/a07da76c-1fae-4d98-bff8-1d92652c2cdc/created-by/: __value
project/ticgit/tickets/a07da76c-1fae-4d98-bff8-1d92652c2cdc/description/: __value
rakelib/: authors.rake  bacon.rake  cucumber.rake  grancher.rake  manifest.rake  rcov.rake  release.rake  setup.rake  traits.rake  yard.rake  ycov.rake
spec/: base.spec  base_spec.rb  cli.spec  cli_spec.rb  helper.rb  merging_spec.rb  spec_helper.rb  ticgit.spec  ticgit_spec.rb
spec/ticgit/: base.rb  cli.rb  open.rb
spec/ticgit/command/: new.rb  points.rb  state.rb
tasks/: changelog.rake  gem.rake  gem_installer.rake  git.rake  install_dependencies.rake  metric_changes.rake  reversion.rake  setup.rake  todo.rake
(+18 files in other folders)
